# GeometryFigures

./: CMakeLists.txt  main.cpp
include/Figure/App/Interfaces/: IFigureQueryService.h
include/Figure/App/Service/: FigureAppService.h
include/Figure/App/Service/DTO/: FigureDTO.h
include/Figure/Common/: ColorParser.h  DistanceCalculator.h
include/Figure/Domain/Interfaces/: IShape.h
include/Figure/Domain/Model/: CCircle.h  CLineSegment.h  CPoint.h  CRectangle.h  CTriangle.h
include/Figure/Domain/Service/: FigureDomainService.h
include/Figure/Infrastructure/Interfaces/: IFigureRepository.h
include/Figure/Infrastructure/Persistence/InMemory/: FigureRepository.h
include/Figure/Infrastructure/Query/: FigureQueryService.h
src/Figure/App/Service/: FigureAppService.cpp
src/Figure/App/Service/DTO/: FigureDTO.cpp
src/Figure/Common/: ColorParser.cpp  DistanceCalculator.cpp
src/Figure/Domain/Model/: CCircle.cpp  CLineSegment.cpp  CPoint.cpp  CRectangle.cpp  CTriangle.cpp
src/Figure/Domain/Service/: FigureDomainService.cpp
src/Figure/Infrastructure/Persistence/InMemory/: FigureRepository.cpp
src/Figure/Infrastructure/Query/: FigureQueryService.cpp
